// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input is not ISO8601 date 1`] = `
<div>
  <input />
  <div>
    Hi is not a valid ISO 8601 date. Please check your value and try again.
  </div>
</div>
`;

exports[`It sould be valid if input is ISO8601 date 1`] = `
<div>
  <input />
  <div />
</div>
`;

exports[`It sould be valid if input is empty 1`] = `
<div>
  <input />
  <div />
</div>
`;
